fix firefox drop, expand/collapse glyph changes color depending on open/close state

--- a/src/styles/SceneGraphPage.css
+++ b/src/styles/SceneGraphPage.css
@@ -1,3 +1,4 @@
+@import "./variables.css";
 
 .sceneGraph {
   position: relative;
@@ -155,6 +156,8 @@
   top: 0px;
   width: 0;
   height: 0;
-  border-top: 12px solid black;
+  border-top-width: 12px;
+  border-top-style: solid;
+  border-top-color: --colors-bluegrey;
   border-right: 12px solid transparent;
 }
